ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/npsp__Matching_Gift_Request_Deadline__c.field-meta.xml
<CustomField>
    <fullName>npsp__Matching_Gift_Request_Deadline__c</fullName>
    <description>Use this field to note any age restrictions this company places on Matching Gift eligibility.</description>
    <inlineHelpText>Any restrictions on how old gifts can be to be eligible for matching.</inlineHelpText>
    <label>Matching Gift Request Deadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>