ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/npsp__Number_of_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>npsp__Number_of_Household_Members__c</fullName>
    <description>The number of Contacts who are members of this Household.</description>
    <inlineHelpText>for Household Accounts, the number of Contacts in the Household.</inlineHelpText>
    <label>Number of Household Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>