ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Number_of_Full_Time_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Full_Time_Staff__c</fullName>
    <label>Number of Full-Time Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>