ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Organization_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization 18 Digit ID</label>
    <type>Text</type>
</CustomField>