ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <description>Organization characteristics.</description>
    <label>Organization Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy_Policy</fullName>
                <label>Advocacy &amp; Policy</label>
            </value>
            <value>
                <fullName>Arts &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Boys &amp; Men of Color Empowerment</fullName>
            </value>
            <value>
                <fullName>Civic Engagement</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Economic Development</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Environment &amp; Climate Change</fullName>
            </value>
            <value>
                <fullName>Family &amp; Parent Engagement</fullName>
            </value>
            <value>
                <fullName>Financial Institute</fullName>
            </value>
            <value>
                <fullName>Food/Wine</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Immigrant Rights &amp; Legal Services</fullName>
            </value>
            <value>
                <fullName>Leadership Development &amp; Youth Empowerment</fullName>
            </value>
            <value>
                <fullName>LGBTQ Rights</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Research &amp; Data</fullName>
            </value>
            <value>
                <fullName>S.T.E.M. &amp; Workforce Development</fullName>
            </value>
            <value>
                <fullName>Violence Prevention</fullName>
            </value>
            <value>
                <fullName>Voter Registration</fullName>
            </value>
            <value>
                <fullName>Women &amp; Girls Empowerment</fullName>
            </value>
            <value>
                <fullName>Youth Empowerment</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>