ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Organizational_Budget__c.field-meta.xml
<CustomField>
    <fullName>Organizational_Budget__c</fullName>
    <label>Organizational Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>