ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Pledge_Payments_FY19__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Payments_FY19__c</fullName>
    <description>Total Pledge Payments</description>
    <inlineHelpText>Total Pledge Payments</inlineHelpText>
    <label>Pledge Payments FY19</label>
    <summarizedField>Opportunity.npe01__Payments_Made__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Pledged</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Tickets, Grant Incoming</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>