ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Posted_Donation_FY19__c.field-meta.xml
<CustomField>
    <fullName>Posted_Donation_FY19__c</fullName>
    <inlineHelpText>Posted Donations</inlineHelpText>
    <label>Posted Donation FY19</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Tickets, Grant Incoming</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>