ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Relationship_to_LCF__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_LCF__c</fullName>
    <label>Relationship to LCF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potential Grantee</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Declination</fullName>
            </value>
            <value>
                <fullName>Current Grantee</fullName>
            </value>
            <value>
                <fullName>Former Grantee</fullName>
            </value>
            <value>
                <fullName>Current Funder</fullName>
            </value>
            <value>
                <fullName>Former Funder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>