ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Sheba__c.field-meta.xml
<CustomField>
    <fullName>Sheba__c</fullName>
    <label>General E-Mail</label>
    <type>Url</type>
</CustomField>