ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/The_population_we_serve_is_at_least_51__c.field-meta.xml
<CustomField>
    <fullName>The_population_we_serve_is_at_least_51__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amount of people the organization serves on a yearly basis.</description>
    <inlineHelpText>The population we serve is at least 51% Latino</inlineHelpText>
    <label>At Least 51% Latino population served</label>
    <type>Checkbox</type>
</CustomField>