ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Total_Donation_By_Household_FY19__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_By_Household_FY19__c</fullName>
    <formula>Posted_Donation_FY19__c + Pledge_Payments_FY19__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Posted Donations plus Pledge Payments (Not Completed Pledges)</inlineHelpText>
    <label>Total Donation By Household FY19</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>