ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/fields/Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested__c</fullName>
    <label>Total Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>