ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/recordTypes/Fiscal_Sponsor.recordType-meta.xml
<RecordType>
    <fullName>Fiscal_Sponsor</fullName>
    <active>true</active>
    <label>Fiscal Sponsor</label>
</RecordType>