ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>false</active>
    <label>Individual</label>
</RecordType>