ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/recordTypes/TestRecordType.recordType-meta.xml
<RecordType>
    <fullName>TestRecordType</fullName>
    <active>false</active>
    <description>Test out layout for Organization</description>
    <label>TestRecordType</label>
</RecordType>