ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/listViews/Back_Coding_View.listView-meta.xml
<ListView>
    <fullName>Back_Coding_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>npe01__One2OneContact__c</columns>
    <columns>Organization_Type__c</columns>
    <columns>Latino_Based_Org__c</columns>
    <columns>Tax_Status__c</columns>
    <columns>EIN__c</columns>
    <columns>Mission_Statement__c</columns>
    <columns>Counties_Served__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Fiscal_Sponsor__c</columns>
    <columns>Fiscal_Sponsor_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>Back Coding View</label>
</ListView>