ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/listViews/Fiscal_Sponsor.listView-meta.xml
<ListView>
    <fullName>Fiscal_Sponsor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Fiscal_Sponsor</value>
    </filters>
    <label>Fiscal Sponsor</label>
</ListView>