ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/listViews/NewLastWeek.listView-meta.xml
<ListView>
    <fullName>NewLastWeek</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/5/2019 12:00 AM</value>
    </filters>
    <label>New Last Week</label>
</ListView>