ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Account/listViews/Organization_Details.listView-meta.xml
<ListView>
    <fullName>Organization_Details</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Organization_Type__c</columns>
    <columns>Relationship_to_LCF__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>npe01__One2OneContact__c</columns>
    <columns>Counties_Served__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>npo02__TotalOppAmount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Organization Details</label>
</ListView>